test/typecheck/fail/overload_bound.sail

val foo : unit -> unit

overload foo = {foo}
